# Django_REST_file_upload

./: db.sqlite3  pyproject.toml
fileuploadexample/: settings.py  urls.py
tests/: test_django_file_upload.py
uploadapp/: models.py  serializers.py  urls.py
